--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "express-sanitizer": "^1.0.6",
     "mysql": "^2.18.1",
     "sqlite-async": "^1.2.0",
     "sqlite3": "^5.1.4"
