--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "sqlite-async": "^1.0.0",
-    "sqlite3": "^5.0.3"
+    "express-sanitizer": "^1.0.6",
+    "sqlite-async": "",
+    "sqlite3": ""
   }
 }
